# nanoodle-py

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: DESIGN.md  SPEC-engine.md  SPEC-format.md  SPEC-io.md  agent-skills.md
examples/agent-skill/poster-generator/: SKILL.md
examples/x402/: README.md  pay_with_print.py  pay_with_wallet.py
scripts/: live-spot-check.py
src/nanoodle/: __init__.py  __main__.py  engine.py  errors.py  graph.py  iodef.py  local_media.py  media.py  share.py  transport.py  workflow.py  x402.py
tests/: __init__.py  _util.py  test_agent_skill_example.py  test_audio_nodes.py  test_chat_nodes.py  test_cli.py  test_cost_errors.py  test_engine_nodes.py  test_graph_io.py  test_graph_load.py  test_image_nodes.py  test_io_interface.py  test_local_media.py  test_local_nodes.py  test_media.py  test_media_placeholders.py  test_run_semantics.py  test_share.py  test_smoke.py  test_transcribe.py  test_video_nodes.py  test_x402.py
tests/fixtures/: cycle.json  duplicate-names.json  edit-multi.json  field-override.json  join-choice.json  llm-vision.json  music-poll.json  parallel-lanes.json  starter-graph.json  transcribe.json  tts-binary.json  unsupported-node.json  video-poll.json
tests/fixtures/share/: a-files.json  a-filesless.json  a-uncompressed.json  g-starter.json  g-unicode.json  j-starter.json
tests/fixtures/x402/: 402.json
tests/harness/: __init__.py  mockserver.py
