[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nanoodle"
version = "0.1.0"
description = "Re-execute nanoodle (nanoodle.io) AI workflow saves against the NanoGPT API — zero dependencies"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "nanoodle contributors" }]
keywords = ["nanoodle", "nanogpt", "workflow", "ai", "image", "video", "audio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.urls]
Homepage = "https://nanoodle.io"

[project.scripts]
nanoodle = "nanoodle.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
