[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nanoodle"
version = "0.1.3"
description = "Run nanoodle visual AI workflows from Python — zero-dependency executor for saved noodle-graph.json files"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "255BITS" }]
keywords = [
    "nanoodle",
    "nanogpt",
    "workflow",
    "ai",
    "generative",
    "image",
    "video",
    "audio",
    "llm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Graphics",
]
dependencies = []

[project.urls]
Homepage = "https://nanoodle.com"
Repository = "https://github.com/nanoodlecom/nanoodle-py"

[project.scripts]
nanoodle-py = "nanoodle.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
